--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
       <li><a href="module-2/Klausen_Mod2_2.html">Assignment 2.2</a></li>
       <li><a href="module-3/Klausen_Mod3_3.html">Assignment 3.3</a></li>
       <li><a href="module-6/Klausen_Mod6_2.html">Assignment 6.2</a></li>
+      <li><a href="module-9/Klausen_Mod9_3.html">Assignment 9.3</a></li>
+
     </ul>
     <h3>Projects</h3>
     <ul>
